@@ -152,7 +152,14 @@ slot_min_size = 256
 # store the upload file to trunk file when it's size <=  this value
 # default value is 16MB
 # since V3.00
-slot_max_size = 4MB
+slot_max_size = 1MB
+
+# the alignment size to allocate the trunk space
+# default value is 0 (never align)
+# since V6.05
+# NOTE: the larger the alignment size, the less likely of disk
+#       fragmentation, but the more space is wasted.
+trunk_alloc_alignment_size = 512
 
 # the trunk file size, should >= 4MB
 # default value is 64MB
