@@ -687,6 +687,7 @@ static int tracker_deal_parameter_req(struct fast_task_info *pTask)
             "use_trunk_file=%d\n"
             "slot_min_size=%d\n"
             "slot_max_size=%d\n"
+            "trunk_alloc_alignment_size=%d\n"
             "trunk_file_size=%d\n"
             "trunk_create_file_advance=%d\n"
             "trunk_create_file_time_base=%02d:%02d\n"
@@ -707,6 +708,7 @@ static int tracker_deal_parameter_req(struct fast_task_info *pTask)
                 &g_storage_reserved_space, reserved_space_str),
         g_if_use_trunk_file,
         g_slot_min_size, g_slot_max_size,
+        g_trunk_alloc_alignment_size,
         g_trunk_file_size, g_trunk_create_file_advance,
         g_trunk_create_file_time_base.hour,
         g_trunk_create_file_time_base.minute,
