@@ -9,6 +9,7 @@ Version 6.05  2019-12-20
  * trunk binlog compression support transaction
  * support backup binlog file when truncate trunk binlog,
    the config item in tracker.conf: trunk_binlog_max_backups
+ * support alignment size for trunk space allocation
 
 Version 6.04  2019-12-05
  * storage_report_ip_changed ignore result EEXIST
